<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/game_n_score"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/game"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/decrement"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginRight="16dp"
            android:onClick="decrese"
            android:text="@string/minus"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/increment"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginRight="16dp"
            android:onClick="increse"
            android:text="@string/plus"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/throws_quantity"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/throws_total"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/game_n_score"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/game_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/game_choice"
            android:textAlignment="gravity"
            android:textColor="#F44336"
            android:textSize="100sp"
            android:textStyle="bold"
            android:gravity="right"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/dart"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1"
            android:textAlignment="gravity"
            android:textColor="#F44336"
            android:textSize="100sp"
            android:textStyle="bold"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_name"
        android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Ateam_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/team_a"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="40sp"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/darker_gray" />

                    <NumberPicker
                        android:id="@+id/numberPicker1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <Button
                        android:id="@+id/Bplus1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="addOneForTeamA"
                        android:text="@string/calculate"/>

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="555dp"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Bteam_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/team_b"
                        android:textColor="#616161"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="40sp"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/darker_gray" />

                    <NumberPicker
                        android:id="@+id/numberPicker2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp" />

                    <Button
                        android:id="@+id/Bplus2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:onClick="addOneForTeamB"
                        android:text="@string/calculate"/>

                </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>